# httpAPIService

./: Cargo.toml  README.md  test.sh
src/: bind_hyper.rs  bind_ureq.rs  common.rs  lib.rs  simple_api.rs  simple_http.rs
tests/: hyper_simple_api.rs  hyper_simple_http.rs  simple_api.rs  simple_http.rs  ureq_simple_api.rs  ureq_simple_http.rs
