[package]
name = "http_api_service"
version = "0.3.1"
license = "MIT"
authors = ["JunYi JohnTeee Lee <johnteee@gmail.com>"]
edition = "2018"
include = ["src/**/*.rs", "Cargo.toml"]
readme = "README.md"
description = "A Retrofit inspired implementation for Rust."
documentation = "https://docs.rs/http_api_service/"
homepage = "https://github.com/TeaEntityLab/httpAPIService"
repository = "https://github.com/TeaEntityLab/httpAPIService"
keywords = ["retrofit","http","api","binding","hyper"]

[badges.maintenance]
status = "actively-developed"

[lib]
name = "http_api_service"
path = "src/lib.rs"

[features]
default = [
  "for_hyper", "multipart", "for_serde"
]
pure = []
for_hyper = [ "hyper", "tokio", "http" ]
for_ureq = [ "ureq", "fp_rust", ]
multipart = [ "formdata", "multer", "mime" ]
for_serde = [ "serde", "serde_json" ]

test_runtime = [
"for_hyper", "for_ureq",
"multipart", "for_serde",

"hyper/full",
"fp_rust",
]

[dependencies]

# Required
bytes = "^1.0.0"
url="^2.2.0"
futures = { version = "0.3", default-features = false, features = ["thread-pool"] }

# for_hyper
hyper = { version = "^0.14.0", optional = true, features = ["client", "http1", "http2", "stream", "tcp",] }
tokio = { version = "^1.8.0", optional = true, features = ["time", "macros",] }
http = { version = "^0.2.4", optional = true }

# for_ureq
ureq = { version = "^2.1.0", optional = true, features = ["tls",] }

# multipart
formdata = { version = "^0.13.0", optional = true }
multer = { version = "^2.0.0", optional = true }
mime = { version = "^0.3.0", optional = true }

# for_serde
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_json = { version = "^1.0", optional = true }

# test_runtime
fp_rust={ version = "^0.2.4", features = ["for_futures"], optional = true }

[[test]]
name = "ureq_simple_http"
path = "tests/ureq_simple_http.rs"
required-features = ["test_runtime"]

[[test]]
name = "ureq_simple_api"
path = "tests/ureq_simple_api.rs"
required-features = ["test_runtime"]

[[test]]
name = "hyper_simple_http"
path = "tests/hyper_simple_http.rs"
required-features = ["test_runtime"]

[[test]]
name = "hyper_simple_api"
path = "tests/hyper_simple_api.rs"
required-features = ["test_runtime"]
